--- a/ios/Main/customTabBarCollectionViewCell.xib
+++ b/ios/Main/customTabBarCollectionViewCell.xib
@@ -1,21 +1,130 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="customTabBarCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="customTabBarCollectionViewCell" customModule="ios" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1.새소리물소리" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qA2-Of-Mc2">
+                        <rect key="frame" x="35" y="137" width="89" height="18"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="성남시" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XR6-or-nUh">
+                        <rect key="frame" x="35" y="158" width="34" height="16"/>
+                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="13"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fFM-su-5Nl">
+                        <rect key="frame" x="139" y="137" width="26" height="21"/>
+                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                        <color key="textColor" red="0.93044406180000006" green="0.47848826649999998" blue="0.1841924787" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xyp-i2-GRb">
+                        <rect key="frame" x="35" y="178" width="51" height="14"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hk6-UG-9zo">
+                                <rect key="frame" x="2" y="1" width="10" height="10"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="10" id="ISb-EC-0to"/>
+                                    <constraint firstAttribute="width" constant="10" id="tdT-ZQ-XMD"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tt0-sk-ffD">
+                                <rect key="frame" x="15" y="3" width="21.5" height="6"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="hk6-UG-9zo" firstAttribute="leading" secondItem="Xyp-i2-GRb" secondAttribute="leading" constant="2" id="8EP-Mf-aHv"/>
+                            <constraint firstItem="Tt0-sk-ffD" firstAttribute="top" secondItem="Xyp-i2-GRb" secondAttribute="top" constant="3" id="A1j-tE-ZNA"/>
+                            <constraint firstAttribute="bottom" secondItem="Tt0-sk-ffD" secondAttribute="bottom" constant="5" id="MKc-O0-wsg"/>
+                            <constraint firstItem="hk6-UG-9zo" firstAttribute="top" secondItem="Xyp-i2-GRb" secondAttribute="top" constant="1" id="XCx-BB-uaI"/>
+                            <constraint firstAttribute="bottom" secondItem="hk6-UG-9zo" secondAttribute="bottom" constant="3" id="cPr-1e-ybD"/>
+                            <constraint firstItem="Tt0-sk-ffD" firstAttribute="leading" secondItem="hk6-UG-9zo" secondAttribute="trailing" constant="3" id="pzP-9n-5Xq"/>
+                        </constraints>
+                    </view>
+                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DC4-WR-3ns">
+                        <rect key="frame" x="89" y="178" width="51" height="14"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Ezp-4Q-ogv">
+                                <rect key="frame" x="3" y="2" width="10" height="10"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="10" id="ACz-QH-hfx"/>
+                                    <constraint firstAttribute="width" constant="10" id="lkx-cl-QCm"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RVl-bR-pIG">
+                                <rect key="frame" x="18" y="4" width="28" height="6"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="RVl-bR-pIG" firstAttribute="leading" secondItem="Ezp-4Q-ogv" secondAttribute="trailing" constant="3" id="2C8-8u-4Fc"/>
+                            <constraint firstItem="RVl-bR-pIG" firstAttribute="top" secondItem="DC4-WR-3ns" secondAttribute="top" constant="4" id="4qR-D0-oot"/>
+                            <constraint firstAttribute="bottom" secondItem="RVl-bR-pIG" secondAttribute="bottom" constant="4" id="8xI-mo-swP"/>
+                            <constraint firstItem="Ezp-4Q-ogv" firstAttribute="leading" secondItem="DC4-WR-3ns" secondAttribute="leading" constant="3" id="9nc-Hp-ix2"/>
+                            <constraint firstItem="Ezp-4Q-ogv" firstAttribute="top" secondItem="DC4-WR-3ns" secondAttribute="top" constant="2" id="EJ0-d8-Syv"/>
+                        </constraints>
+                    </view>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XqS-xy-x99">
+                        <rect key="frame" x="35" y="5" width="130" height="130"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="130" id="UNJ-D3-Q3M"/>
+                            <constraint firstAttribute="height" constant="130" id="fuF-yy-nt3"/>
+                        </constraints>
+                        <state key="normal" title="Button"/>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Ba-e7-hOh">
+                        <rect key="frame" x="143" y="14" width="15" height="10"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <state key="normal" image="star" catalog="system"/>
+                    </button>
+                </subviews>
             </view>
+            <constraints>
+                <constraint firstItem="fFM-su-5Nl" firstAttribute="top" secondItem="XqS-xy-x99" secondAttribute="bottom" constant="2" id="1zh-PF-UuT"/>
+                <constraint firstItem="XR6-or-nUh" firstAttribute="leading" secondItem="ZTg-uK-7eu" secondAttribute="leading" constant="35" id="5Zc-bT-mAn"/>
+                <constraint firstItem="fFM-su-5Nl" firstAttribute="leading" secondItem="qA2-Of-Mc2" secondAttribute="trailing" constant="15" id="8ky-GK-Hd1"/>
+                <constraint firstItem="DC4-WR-3ns" firstAttribute="top" secondItem="qA2-Of-Mc2" secondAttribute="bottom" constant="23" id="EjD-Oa-khz"/>
+                <constraint firstItem="XqS-xy-x99" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="I0N-kx-PEC"/>
+                <constraint firstItem="Xyp-i2-GRb" firstAttribute="top" secondItem="XR6-or-nUh" secondAttribute="bottom" constant="4" id="LkM-iK-0Bo"/>
+                <constraint firstItem="ZTg-uK-7eu" firstAttribute="bottom" secondItem="Xyp-i2-GRb" secondAttribute="bottom" constant="8" id="MVD-ak-9LA"/>
+                <constraint firstItem="Xyp-i2-GRb" firstAttribute="leading" secondItem="ZTg-uK-7eu" secondAttribute="leading" constant="35" id="VAy-B0-KXu"/>
+                <constraint firstItem="ZTg-uK-7eu" firstAttribute="bottom" secondItem="DC4-WR-3ns" secondAttribute="bottom" constant="8" id="f8r-0q-uOb"/>
+                <constraint firstItem="DC4-WR-3ns" firstAttribute="leading" secondItem="Xyp-i2-GRb" secondAttribute="trailing" constant="3" id="gB1-qw-yND"/>
+                <constraint firstItem="qA2-Of-Mc2" firstAttribute="top" secondItem="XqS-xy-x99" secondAttribute="bottom" constant="2" id="iC6-Sf-e1H"/>
+                <constraint firstItem="qA2-Of-Mc2" firstAttribute="leading" secondItem="ZTg-uK-7eu" secondAttribute="leading" constant="35" id="oJq-Oc-NSV"/>
+                <constraint firstItem="XR6-or-nUh" firstAttribute="top" secondItem="qA2-Of-Mc2" secondAttribute="bottom" constant="3" id="sA6-en-unr"/>
+                <constraint firstAttribute="trailing" secondItem="DC4-WR-3ns" secondAttribute="trailing" constant="60" id="wHA-gX-Zn2"/>
+                <constraint firstItem="XqS-xy-x99" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="wzN-hW-XCY"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <point key="canvasLocation" x="137.68115942028987" y="127.90178571428571"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="star" catalog="system" width="64" height="58"/>
+    </resources>
 </document>
